CB-33092 Refactor Azure client exception handling to return optional instead of null and handle that accordingly